<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <RadioGroup
        android:id="@+id/scan_interval_radiogroup"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <RadioButton
            android:id="@+id/radio_scan_interval_010"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/radio_scan_interval_010" />

        <RadioButton
            android:id="@+id/radio_scan_interval_020"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/radio_scan_interval_020" />

        <RadioButton
            android:id="@+id/radio_scan_interval_030"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/radio_scan_interval_030" />

        <RadioButton
            android:id="@+id/radio_scan_interval_1"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/radio_scan_interval_1" />

        <RadioButton
            android:id="@+id/radio_scan_interval_2"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/radio_scan_interval_2" />

        <RadioButton
            android:id="@+id/radio_scan_interval_5"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/radio_scan_interval_5" />

        <RadioButton
            android:id="@+id/radio_scan_interval_10"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/radio_scan_interval_10" />

        <RadioButton
            android:id="@+id/radio_scan_interval_15"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/radio_scan_interval_15" />

        <RadioButton
            android:id="@+id/radio_scan_interval_30"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/radio_scan_interval_30" />
    </RadioGroup>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:layout_marginTop="4dip"
        android:background="?android:attr/dividerHorizontal" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2" >

        <Button
            android:id="@+id/ok_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="?android:attr/selectableItemBackground"
            android:gravity="center"
            android:padding="1dp"
            android:text="@string/action_confirm"
            android:textColor="#000000" />

        <View
            android:layout_width="1dip"
            android:layout_height="match_parent"
            android:layout_marginLeft="4dip"
            android:layout_marginRight="4dip"
            android:background="?android:attr/dividerVertical" />

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="?android:attr/selectableItemBackground"
            android:gravity="center"
            android:padding="1dp"
            android:text="@string/action_cancel"
            android:textColor="#000000" />
    </LinearLayout>

</LinearLayout>