<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="ch.fshi.btoppnet.BTDeviceListActivity" >

    <item
        android:id="@+id/menu_refresh"
        android:checkable="false"
        android:orderInCategory="1"
        android:title="@string/action_scan"
        android:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_scan"
        android:orderInCategory="100"
        android:title="@string/action_scan"
        android:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_stop"
        android:orderInCategory="101"
        android:title="@string/action_stop"
        android:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="102"
        android:title="@string/action_settings"
        android:showAsAction="ifRoom|withText">
        <menu>
            <item
                android:id="@+id/action_set_scantime"
                android:orderInCategory="103"
                android:title="@string/action_set_scan_time"
                android:showAsAction="ifRoom|withText"/>
            <item
                android:id="@+id/action_set_scaninterval"
                android:orderInCategory="103"
                android:title="@string/action_set_scan_interval"
                android:showAsAction="ifRoom|withText"/>
            <item
                android:id="@+id/action_set_autoscan_start"
                android:checkable="true"
                android:orderInCategory="103"
                android:title="@string/action_set_autoscan_start"
                android:showAsAction="ifRoom|withText"/>
        </menu>
    </item>
</menu>
