<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="60dp"
    android:orientation="horizontal"
    android:padding="5dp"
    android:weightSum="10">

    <TextView
        android:id="@+id/device_name"
        android:layout_width="0dp"
        android:layout_height="fill_parent"
        android:layout_weight="3"
        android:gravity="center"
        android:text="@string/default_device_name"
        android:textColor="#000000"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/device_mac"
        android:layout_width="0dp"
        android:layout_height="fill_parent"
        android:layout_weight="3"
        android:gravity="center"
        android:textColor="#000000"
        android:textSize="16sp" />

    <!--
    <View
        android:layout_width="1dp"
        android:layout_height="fill_parent"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:background="@color/grey" />
    -->

    <TextView
        android:id="@+id/device_rssi"
        android:layout_width="0dp"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:textColor="#000000"
        android:textSize="16sp" />

    <ImageView
        android:id="@+id/signal_strength"
        android:layout_width="0dp"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:scaleType="fitXY"
        android:contentDescription="@string/device_signal_desc"
        android:gravity="center" />

    <Button
        android:id="@+id/device_connect"
        android:layout_width="0dp"
        android:layout_height="fill_parent"
        android:layout_weight="2"
        android:background="@drawable/connect_button"
        android:gravity="center"
        android:focusable="false"
        android:padding="1dp"
        android:text="@string/action_connect"
        android:textColor="#ffffff" />

</LinearLayout>