<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:padding="5dp"
        android:weightSum="10" >

        <TextView
            android:id="@+id/header_device_name"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="3"
            android:gravity="center"
            android:text="@string/header_device_name"
            android:textAllCaps="true"
            android:textColor="#000000"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/header_device_mac"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="3"
            android:gravity="center"
            android:text="@string/header_device_mac"
            android:textAllCaps="true"
            android:textColor="#000000"
            android:textSize="16sp"
            android:textStyle="bold" />

        <!-- header item for device list -->

        <TextView
            android:id="@+id/header_device_rssi"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="4"
            android:gravity="center"
            android:text="@string/header_device_rssi"
            android:textAllCaps="true"
            android:textColor="#000000"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:background="@color/grey" />

    <ListView
        android:id="@+id/device_list"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:divider="@color/grey"
        android:dividerHeight="1dp" >
    </ListView>

</LinearLayout>